<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NovelRepo</string>
    <string name="library">Library</string>
    <string name="discover">Discover</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="welcome_back">Welcome back</string>
    <string name="username">username</string>
    <string name="recent_book_author">J.R.R. Tolkien</string>
    <string name="recent_book_name">The Hobbit</string>
    <string name="continue_reading">Continue reading</string>
    <string name="recent_progress">62%</string>
    <string name="recommended_title_1" tools:ignore="Typos">recommended_title_1</string>
    <string name="recommended_title_3">place</string>
    <string name="recommended_title_2">place\n</string>
    <string name="all">All</string>
    <string name="reading">Reading</string>
    <string name="completed">Completed</string>
    <string name="favorites">Favorites</string>
    <string name="recommended">Recommended for you</string>
    <string name="card_description">The Hobbit follows a quiet, comfort-loving hobbit. Recruited by a great wizard and a group of thirteen dwarves, he joins an epic quest to reclaim their stolen ancestral treasure from a fearsome dragon.</string>
    <string name="no_current_book">No Current Book</string>
    <string name="book_cover">cover\n</string>
    <string name="account">Account</string>
    <string name="create">Create</string>
</resources>