<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>
    <item
        android:id="@+id/nav_discover"
        android:icon="@drawable/ic_discover"
        android:title="@string/discover"
        />
    <item
        android:id="@+id/nav_library"
        android:icon="@drawable/ic_library"
        android:title="@string/library"
        />
    <item
        android:id="@+id/nav_create"
        android:icon="@drawable/ic_plus"
        android:title="@string/create"
        />


    <item
        android:id="@+id/invisible"
        android:visible="false"
        android:icon="@drawable/ic_profile"
        android:title="@string/account" />
</menu>